main/fix video overflow

--- a/src/components/PreloadVideo/styles.css
+++ b/src/components/PreloadVideo/styles.css
@@ -3,10 +3,21 @@
   overflow: hidden;
   min-width: 100%; 
   min-height: 100%; 
+  position: fixed;
+  
 }
+
 .main-video-container{
   overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  object-fit: cover;
+  width: 100vw;
+  height: 100vh;
+  z-index:1;
 }
+
 .video-play {
   position: absolute;
   width: 5.0vw;
